syntax = "proto3";
package aggregates.store;

import "google/protobuf/timestamp.proto";
import "aggregates/store/item.proto";

message ItemReview {
    int64 id = 1;
    string uuid = 2;
    string user_uuid = 3;
    aggregates.store.Item item = 4;
    string review = 5;
    double rating = 6;
    google.protobuf.Timestamp created_at = 7;
}